--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lucide-react": "^0.290.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drop-zone": "^4.3.3",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
     "tailwind-merge": "^1.14.0",
